apps/production/new-new-boplats/web/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: new-new-boplats-web
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: new-new-boplats-web
  template:
    spec:
      containers:
        - name: new-new-boplats-web
          image: artifactory.local.hejsan.xyz/docker/josmase/new-new-boplats-web:v0.0.20@sha256:b4fffbaf34fe5635341bdde27226c62182cfdcd4d28b18f0d5e61ed778870917
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
