apps/production/new-new-boplats/web/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-web

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: new-new-boplats-web
          port: http

  tls:
    secretName: local-hejsan-xyz-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: new-new-boplats-web-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`new-new-boplats.hejsan.xyz`)
      kind: Rule
      services:
        - name: new-new-boplats-web
          port: http

  tls:
    secretName: hejsan-xyz-tls
